--- a/pizero_robot.service
+++ b/pizero_robot.service
@@ -4,7 +4,9 @@
 
 [Unit]
 Description=@pizero_robot
-After=network.target
+#After=network.target
+After=network-online.target
+Wants=network-online.target
 
 [Service]
 Type=simple
